<resources>
    <string name="app_name" translatable="false">Eventify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get started</string>
    <string name="welcome_to">Welcome to</string>
    <string name="finish">Finish</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_unsuccessful">Login Unsuccessful</string>
    <string name="logout_successful">You have been logged out!</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="check_email">Please check your email!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="type_email">Type Your Email</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="i_accept_terms">I accept Terms and Conditions</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="venues">Venues</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="search_here">Search here</string>
    <string name="subs_description">The Right Plan for Your Business</string>
    <string name="subs_heading2">We have several powerful plans to showcase your business and get discovered as a creative entrepreneurs. \nEverything you need.</string>
    <string name="bill_monthly">Bill Monthly</string>
    <string name="bill_annually">Bill Annually</string>
    <string name="try_1_month">Try 1 month</string>
    <string name="referral_program">Referral Program</string>
    <string name="get_a_free_ticket">Get a free ticket!</string>
    <string name="referral_note">Note that to access and enjoy our exclusive rewards, an active subscription is mandatory.</string>
    <string name="invite_link_note">*Note that additional reward system will also be available soon.</string>
    <string name="subscription_note">*Note that additional premium packages with extra features will also be available soon.</string>
    <string name="share_invite_link">Share your invite link*</string>
    <string name="copy_link">Copy link</string>
    <string name="share">Share</string>
    <string name="type_your_message">Type your message...</string>
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>
    <string name="venue_type_colon">Venue type:</string>
    <string name="event_type_colon">Event type:</string>
    <string name="open_hours">Open hours:</string>
    <string name="likes">Likes:</string>
    <string name="show_location">show location</string>
    <string name="places">Places</string>
    <string name="duration_colon">Duration:</string>
    <string name="date_colon">Date:</string>
    <string name="organizer_colon">Organizer:</string>
    <string name="published_colon">Published:</string>
    <string name="event_duration_colon">Event duration:</string>
    <string name="events">Events</string>
    <string name="custom_events">User events</string>
    <string name="venue_details">Venue details</string>
    <string name="event_details">Event details</string>
    <string name="buy_ticket">Buy ticket</string>
    <string name="register_failed">Register failed!</string>
    <string name="register_successful">Registration successful!</string>
    <string name="retry">Retry</string>
    <string name="network_connection_lost">Network connection lost!</string>
    <string name="get_route">Get route</string>
    <string name="get_shortest_route">Get shortest route</string>
    <string name="no_events">No events yet!</string>
    <string name="no_user_events">No user events yet!</string>
    <string name="no_venues">No venues yet!</string>
    <string name="no_comments">No comments yet!</string>
    <string name="no_favorites">No favorites yet!</string>
    <string name="logout">Log out</string>
    <string name="history">History</string>
    <string name="payment">Payment</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="payment_history">Payment history</string>
    <string name="tickets">Tickets</string>
    <string name="chat">Chat</string>
    <string name="subscription">Subscription</string>
    <string name="base">Base</string>
    <string name="base_package_features">Access to cultural events list\n\nAccess to some map functionalities\n\nCommunity contributions</string>
    <string name="free">Free</string>
    <string name="current_plan">Current plan</string>
    <string name="try_">Try</string>
    <string name="slash_year">/year</string>
    <string name="slash_month">/month</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="something_went_wrong_colon">Something went wrong: </string>
    <string name="error_request">Something went wrong. Try again later.</string>
    <string name="add_comment">Add a comment...</string>
    <string name="comments">comments</string>
    <string name="all_details">all details</string>
    <string name="venue_details_colon">Venue details:</string>
    <string name="event_details_colon">Event details:</string>
    <string name="venue_comments_colon">Venue comments:</string>
    <string name="event_comments_colon">Event comments:</string>
    <string name="eventify" translatable="false">eventify</string>
    <string name="eventify_az" translatable="false">eventify.az</string>
    <string name="organizer_events">Organizer events</string>
    <string name="user_events">User events</string>
    <string name="create_your_event">Create your event</string>
    <string name="change_language">Change language</string>
    <string name="azerbaijani_with_flag" translatable="false">🇦🇿 Azərbaycanca</string>
    <string name="english_with_flag" translatable="false">🇺🇸 English</string>
    <string name="russian_with_flag" translatable="false">🇷🇺 Русский</string>
    <string name="azerbaijani" translatable="false">Azərbaycanca</string>
    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="az" translatable="false">🇦🇿</string>
    <string name="en" translatable="false">🇺🇸</string>
    <string name="create_event">Create event</string>
    <string name="change">Change</string>
    <string name="event_date">Event date</string>
    <string name="event_start_time">Event start time</string>
    <string name="event_finish_time">Event finish time</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="event_type">Event type</string>
    <string name="specify_event_date">Specify event date</string>
    <string name="specify_event_start_time">Specify event start time</string>
    <string name="specify_event_finish_time">Specify event finish time</string>
    <string-array name="event_types">
        <item>Theatre</item>
        <item>Concert</item>
        <item>Exhibition</item>
        <item>Book fare</item>
        <item>Seminar</item>
        <item>Festival</item>
        <item>Dance</item>
    </string-array>
    <string name="navigating_help_page">[navigating to help page]</string>
    <string name="navigating_payment_screen">[navigating payment screen]</string>
    <string name="navigating_buy_ticket">[buying ticket...]</string>
    <string name="type_main_text_first">Type main text first!</string>
    <string name="password_should_contain_lowercase">Password should contain lowercase letter(s)!</string>
    <string name="password_should_contain_uppercase">Password should contain uppercase letter(s)!</string>
    <string name="password_should_contain_digit">Password should contain digit(s)!</string>
    <string name="password_should_contain_special_character">Password should contain special character(s)!</string>
    <string name="min_password_length_is_8">Minimum password length is 8!</string>
    <string name="please_accept_terms">Please accept Terms and Conditions!</string>
    <string name="please_enter_valid_email">Please enter a valid e-mail address!</string>
    <string name="please_enter_username">Please enter the username!</string>
    <string name="please_enter_password">Please enter the password!</string>
    <string name="please_enter_comment">Please write a comment!</string>
    <string name="please_fill_all_fields">Please fill the fields!</string>
    <string name="fill_all_input_fields">Please fill the input fields!</string>
    <string name="please_specify_event_type">Please specify the event type!</string>
    <string name="please_specify_event_all_timing_details">Please specify all timing details!</string>
    <string name="please_specify_event_date_first">Please specify event date first!</string>
    <string name="please_specify_event_start_time_first">Please specify start time first!</string>
    <string name="please_add_event_title">Please add an event title!</string>
    <string name="please_add_event_description">Please add an event description!</string>
    <string name="please_reconsider_finish_time">Please reconsider finish time!</string>
    <string name="please_reconsider_event_times">Please reconsider event times!</string>
    <string name="start_time_cannot_be_past">Start time cannot be in the past!</string>
    <string name="finish_time_cannot_be_earlier">Finish time cannot be earlier than start time!</string>
    <string name="picture_upload_successful">Picture upload successful!</string>
    <string name="custom_event_creation_successful">Custom user event has been created successfully!</string>
    <string name="custom_event_sent_for_review">Custom user event has been sent to be reviewed!</string>
    <string name="no_image_selected">No image selected!</string>
    <string name="upload_failed_colon">Upload failed:</string>
    <string name="image_upload_successful_colon">Image uploaded successfully:</string>
    <string name="error_fetching_route">Error fetching route</string>
    <string name="location_permission_denied">Location permission denied!</string>
    <string name="enable_location_service">Please enable location service!</string>
    <string name="verify_email">Please verify your account!</string>
    <string name="continue_">Continue</string>
    <string name="verification_link">We sent a verification link to:</string>
    <string name="try_again">Please try again!</string>
    <string name="send_verification">Didn\'t receive the email?</string>
    <string name="click_to_resend">Click to resend.</string>
    <string name="wrong_email">Wrong email address?</string>
    <string name="click_to_register">Click to register.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="warning">Warning!</string>
    <string name="got_it">Got it</string>
    <string name="cancel_">Cancel</string>
    <string name="verification_warning_text">If you want to leave now, please finish the registration later via verification link sent to your email.</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="options">Options:</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="see_also">See also:</string>
    <string name="eventify_slogan">Experience Events Like Never Before!</string>
</resources>