<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/profile_icon_selected"
            android:title="@string/profile"/>
        <item
            android:id="@+id/drawer_tickets"
            android:icon="@drawable/ic_payment"
            android:title="@string/tickets"/>
        <item
            android:id="@+id/drawer_payment_history"
            android:icon="@drawable/ic_payment_history"
            android:title="@string/payment_history"/>
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/drawer_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>