<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_location_dynamic"
        android:title="@string/map" />
    <item
        android:id="@+id/placesFragment"
        android:icon="@drawable/ic_event_dynamic"
        android:title="@string/events" />
    <item
        android:id="@+id/venuesFragment"
        android:icon="@drawable/ic_venue_dynamic"
        android:title="@string/venues" />

<!--    <item-->
<!--        android:id="@+id/chatFragment"-->
<!--        android:icon="@drawable/ic_chat_dynamic"-->
<!--        android:title="@string/chat" />-->


<!--    temporary items -> will be located in drawer when the app fully functions-->
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_dynamic"
        android:title="@string/profile" />
</menu>