<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light_eventify"
    tools:context=".presentation.ui.fragments.auth.welcomeOnBoard.FirstFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineWelcomeFirst1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/eventify_guideline_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineWelcomeFirst2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/eventify_guideline_right" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineWelcomeFirst31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineWelcomeFirst32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineWelcomeFirst4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonWelcomeLanguageEN"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_regular"
        android:minWidth="0dp"
        android:paddingHorizontal="10dp"
        android:text="@string/en"
        android:textColor="@color/eventify_primary"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonWelcomeLanguageAZ"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/guidelineWelcomeFirst1"
        app:layout_constraintTop_toTopOf="@id/guidelineWelcomeFirst31" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonWelcomeLanguageAZ"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_regular"
        android:minWidth="0dp"
        android:paddingHorizontal="10dp"
        android:text="@string/az"
        android:textColor="@color/eventify_primary"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineWelcomeFirst2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonWelcomeLanguageEN"
        app:layout_constraintTop_toTopOf="@+id/buttonWelcomeLanguageEN" />

    <TextView
        android:id="@+id/textWelcomeToTEXTFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textColor="@color/eventify_heading"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineWelcomeFirst2"
        app:layout_constraintStart_toStartOf="@id/guidelineWelcomeFirst1"
        app:layout_constraintTop_toTopOf="@+id/guidelineWelcomeFirst32" />

    <TextView
        android:id="@+id/textEventifyTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/eventify_az"
        android:textColor="@color/eventify_primary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineWelcomeFirst2"
        app:layout_constraintStart_toStartOf="@id/guidelineWelcomeFirst1"
        app:layout_constraintTop_toBottomOf="@id/textWelcomeToTEXTFirst" />

    <TextView
        android:id="@+id/textSloganWelcomeFirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/inter_italic"
        android:text="@string/eventify_slogan"
        android:textColor="@color/eventify_primary"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/guidelineWelcomeFirst2"
        app:layout_constraintStart_toStartOf="@id/guidelineWelcomeFirst1"
        app:layout_constraintTop_toBottomOf="@+id/textEventifyTEXT" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSkipFirst"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_regular"
        android:minWidth="0dp"
        android:paddingHorizontal="16dp"
        android:text="@string/skip"
        android:textColor="@color/eventify_primary"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineWelcomeFirst31" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGetStartedFirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/eventify_primary"
        android:fontFamily="@font/inter_bold"
        android:minHeight="60dp"
        android:text="@string/get_started"
        android:textSize="24sp"
        app:cornerRadius="@dimen/eventify_large_button_corner_radius"
        app:layout_constraintEnd_toEndOf="@id/guidelineWelcomeFirst2"
        app:layout_constraintStart_toStartOf="@+id/guidelineWelcomeFirst1"
        app:layout_constraintBottom_toBottomOf="@id/guidelineWelcomeFirst4" />

</androidx.constraintlayout.widget.ConstraintLayout>