<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.profile.ProfileFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/shimmer_profile" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineProfile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/eventify_guideline_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineProfile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/eventify_guideline_right" />

    <TextView
        android:id="@+id/textHeadingProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@color/eventify_heading"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineProfile2"
        app:layout_constraintStart_toStartOf="@+id/guidelineProfile1"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageUserProfilePictureProfile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_icon_selected"
        app:tint="@color/eventify_on_background"
        app:layout_constraintEnd_toEndOf="@id/guidelineProfile2"
        app:layout_constraintStart_toStartOf="@id/guidelineProfile1"
        app:layout_constraintTop_toBottomOf="@id/textHeadingProfile"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    <TextView
        android:id="@+id/textUsernameProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textAlignment="center"
        android:textColor="@color/eventify_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineProfile2"
        app:layout_constraintStart_toStartOf="@+id/guidelineProfile1"
        app:layout_constraintTop_toBottomOf="@id/imageUserProfilePictureProfile"
        tools:text="Username" />

    <TextView
        android:id="@+id/textUserFullNameProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textAlignment="center"
        android:textColor="@color/purple_dark_eventify"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineProfile2"
        app:layout_constraintStart_toStartOf="@+id/guidelineProfile1"
        app:layout_constraintTop_toBottomOf="@id/textUsernameProfile"
        tools:text="User name and surname" />

    <TextView
        android:id="@+id/textSeeAlsoTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/see_also"
        android:textColor="@color/purple_dark_eventify"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineProfile1"
        app:layout_constraintTop_toBottomOf="@+id/textUserFullNameProfile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReferral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/referral_program"
        android:textSize="16sp"
        app:icon="@drawable/ic_open_in_new_screen"
        app:iconGravity="end"
        app:iconTint="@color/eventify_on_primary"
        android:paddingStart="18dp"
        android:paddingEnd="12dp"
        app:layout_constraintStart_toStartOf="@id/guidelineProfile1"
        app:layout_constraintTop_toBottomOf="@+id/textSeeAlsoTEXT" />

    <Button
        android:id="@+id/btnSubs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="18dp"
        android:paddingEnd="12dp"
        android:text="@string/subscription"
        android:textSize="16sp"
        app:icon="@drawable/ic_open_in_new_screen"
        app:iconGravity="end"
        app:iconTint="@color/eventify_on_primary"
        app:layout_constraintStart_toStartOf="@+id/guidelineProfile1"
        app:layout_constraintTop_toBottomOf="@+id/btnReferral" />

    <TextView
        android:id="@+id/textChangeLanguageTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/application_language"
        android:textColor="@color/purple_dark_eventify"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineProfile1"
        app:layout_constraintTop_toBottomOf="@+id/btnSubs" />

    <Button
        android:id="@+id/buttonChangeLanguageAZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/azerbaijani"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textChangeLanguageTEXT"
        app:layout_constraintStart_toStartOf="@id/guidelineProfile1"/>

    <Button
        android:id="@+id/buttonChangeLanguageEN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/english"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeLanguageAZ"
        app:layout_constraintStart_toStartOf="@id/guidelineProfile1" />

    <Button
        android:id="@+id/buttonChangeLanguageRU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/russian"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeLanguageEN"
        app:layout_constraintStart_toStartOf="@id/guidelineProfile1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogoutProfile"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/danger"
        android:fontFamily="@font/inter_bold"
        android:text="@string/logout"
        android:textColor="@color/eventify_on_primary"
        android:textSize="22sp"
        app:cornerRadius="@dimen/eventify_large_button_corner_radius"
        app:icon="@drawable/ic_logout"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="22sp"
        app:iconTint="@color/eventify_on_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineProfile2"
        app:layout_constraintStart_toStartOf="@id/guidelineProfile1" />

</androidx.constraintlayout.widget.ConstraintLayout>