<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.fragments.auth.ResetPasswordFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/send"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputResetPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputResetPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_your_password"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:boxCornerRadiusBottomEnd="@dimen/eventify_input_field_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/eventify_input_field_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/eventify_input_field_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/eventify_input_field_corner_radius"
        app:boxStrokeColor="#F44336"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_email"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/eventBackButton"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/eventify_background_primary"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:icon="@drawable/ic_back_arrow"
        app:iconSize="24dp"
        app:iconTint="@color/purple_eventify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>